add release methods

--- a/CppApp/CppApp/MainWindow.xaml
+++ b/CppApp/CppApp/MainWindow.xaml
@@ -8,7 +8,9 @@
     mc:Ignorable="d">
 
     <StackPanel x:Name="myStackPanel" Orientation="Horizontal" HorizontalAlignment="Center" VerticalAlignment="Center">
-        <Button x:Name="myButton" Click="myButton_Click">Click Me</Button>
+        <Button x:Name="releaseCustomButton" Background="Red" Click="releaseCustomButton_Click">Release Custom Button</Button>
+        <Button x:Name="releaseRegularButton" Background="Red" Click="releaseRegularButton_Click">Release Regular Button</Button>
+       
     </StackPanel>
     
     
