--- a/CppApp/CppApp/MainWindow.xaml
+++ b/CppApp/CppApp/MainWindow.xaml
@@ -7,7 +7,7 @@
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d">
 
-    <StackPanel x:Name="myStackPanel" Orientation="Horizontal" HorizontalAlignment="Center" VerticalAlignment="Center">
+    <StackPanel x:Name="myStackPanel" Orientation="Vertical" HorizontalAlignment="Center" VerticalAlignment="Center">
 
         <Button x:Name="acquireCustomButton" Background="Green" Click="acquireCustomButton_Click">Acquire Custom Button</Button>
         <Button x:Name="acquireRegularButton" Background="Green" Click="acquireRegularButton_Click">Acquire Regular Button</Button>
@@ -15,7 +15,10 @@
         <Button x:Name="releaseCustomButton" Background="Red" Click="releaseCustomButton_Click">Release Custom Button</Button>
         <Button x:Name="releaseRegularButton" Background="Red" Click="releaseRegularButton_Click">Release Regular Button</Button>
 
-        <Button x:Name="checkAliveReferences" Background="Gray" Click="checkAliveReferences_Click">Check Alive References</Button>
+        <Button x:Name="aliveCustomButton" Background="Purple" Click="isAliveCustomButton_Click">Check Custom Button Alive</Button>
+        <Button x:Name="aliveRegularButton" Background="Purple" Click="isAliveRegularButton_Click">Check Regular Button Alive</Button>
+
+        <!--<Button x:Name="checkAliveReferences" Background="Gray" Click="checkAliveReferences_Click">Check Alive References</Button>-->
        
     </StackPanel>
     
